engine-net-2/examples/Errors/UserMethodsOnlyAvailableForInheritanceTypes.grs
new graph "Rules.grg"

exec { o:double=3.141592654 ; d:double=o.ff() }

quit
